--- a/firebase.json
+++ b/firebase.json
@@ -1,18 +1,13 @@
 {
+  "database": {
+    "rules": "database-rules.json"
+  },
   "hosting": {
     "public": "./",
     "ignore": [
       "firebase.json",
       "database-rules.json",
-      "storage.rules",
-      "functions"
-    ],
-    "headers": [{
-      "source" : "**/*.@(js|html)",
-      "headers" : [ {
-        "key" : "Cache-Control",
-        "value" : "max-age=0"
-      } ]
-    }]
+      "storage.rules"
+    ]
   }
 }
